gccida/c1/put_var_into_stack
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_var_into_stack/src/function.c:1822:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_var_into_stack/src/function.c:1829:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_var_into_stack/src/function.c:1834:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_var_into_stack/src/function.c:1835:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_var_into_stack/src/function.c:1837:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // [rsp+4h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_var_into_stack/src/function.c:1936:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)supercontext_low, 
  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_var_into_stack/src/obj/function.o] Error 1
